# a-mir-formality

./: Cargo.toml  rust-toolchain.toml
crates/formality-driver/: Cargo.toml  README.md
crates/formality-driver/src/: conversion.rs  dump.rs  lib.rs  main.rs  mir.rs  test.rs
crates/formality-driver/test_files/: single_fn.rs
crates/formality-rust/src/: lib.rs
crates/formality-rust/src/check/: borrow_check.rs
crates/formality-rust/src/check/borrow_check/: nll.rs  wf.rs
crates/formality-rust/src/grammar/: ty.rs
crates/formality-rust/src/grammar/rust_builder/: expr.rs  fns.rs  mod.rs  structs_enums_and_adts.rs  traits_and_impls.rs  tys.rs
crates/formality-rust/src/to_rust/: expr.rs  fns.rs  mod.rs  structs_enums_and_adts.rs  test_util.rs  traits_and_impls.rs  tys.rs
src/test/: mir_typeck.rs
tests/: coherence_overlap.rs
